cuda plots notebook

--- a/measurements/cuda_plots.ipynb
+++ b/measurements/cuda_plots.ipynb
@@ -310,7 +310,13 @@
    "id": "5002b2bd",
    "metadata": {},
    "source": [
-    "for size <= 131072 (2^19) no runtime improvement by using streams"
+    "Learnings:\n",
+    "\n",
+    "    1. for size <= 131072 (2^19) no runtime improvement by using streams\n",
+    "    2. The optimal chunk size depends on the array size\n",
+    "    3. Larger array sizes achieve larger improvements\n",
+    "    \n",
+    "    (4.) By increasing the array size we increase both computation and memory -> plotting it vs time doesnt give us valuable information"
    ]
   },
   {
@@ -1079,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9f3b45c9",
+   "id": "70728122",
    "metadata": {},
    "outputs": [
     {
